refactor: Rename project from EntraTokenCli to EntraAuthCli and update related documentation

--- a/docs/learn/layouts/index.html
+++ b/docs/learn/layouts/index.html
@@ -91,7 +91,7 @@
         <div class="step-number">1</div>
         <h3>Install .NET Global Tool</h3>
         <p>Download and install the <a href="https://dotnet.microsoft.com/download/dotnet/10.0" target="_blank">.NET Runtime 10.0</a> or later, then install the tool globally.</p>
-        <pre><code>dotnet tool install -g EntraTokenCli</code></pre>
+        <pre><code>dotnet tool install -g EntraAuthCli</code></pre>
       </div>
       <div class="step">
         <div class="step-number">2</div>
